<resources>
    <string name="app_name">cd common</string>
    <string name="money_sing">￥</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="activity_authenticate_title">实名认证</string>
    <string name="activity_authenticate_name_hint">请填写真实姓名</string>
    <string name="activity_authenticate_id_format_hint">请填写正确的身份证号码</string>
    <string name="activity_authenticate_success">认证成功</string>
    <string name="activity_authenticate_failure">认证失败,请稍后重试</string>
    <string name="activity_authenticate_download_title">是否下载并安装支付宝完成认证?</string>
    <string name="activity_authenticate_download_confirm">好的</string>
    <string name="activity_authenticate_download_cancel">算了</string>
    <string name="activity_find_title">找回密码</string>
    <string name="activity_find_mobile_hint">请输入账号</string>
    <string name="activity_find_code_hint">请输入验证码</string>
    <string name="activity_find_google_hint">请输入谷歌验证码</string>
    <string name="activity_find_password_hint">请输入密码</string>
    <string name="activity_find_repassword_hint">请重新输入密码</string>
    <string name="activity_find_password_format_hint">密码不少于6位</string>
    <string name="activity_find_repassword_format_hint">两次密码输入不一致</string>
    <string name="activity_find_success">密码修改成功</string>
    <string name="activity_find_failure">密码修改失败</string>
    <string name="activity_image_unknow_error">出现未知错误</string>
    <string name="activity_image_tip">提示</string>
    <string name="activity_image_no_camera">没有可用相机</string>
    <string name="activity_image_confirm">确定</string>
    <string name="activity_image_no_cdcard">内存卡不存在</string>
    <string name="activity_image_getimg_failure">图片获取失败</string>
    <string name="activity_image_system_tip">系统提示</string>
    <string name="activity_image_system_content">未取得您的相机、存储空间使用权限，此功能无法使用。请前往应用权限设置打开权限。</string>
    <string name="activity_image_system_open">去打开</string>
    <string name="activity_image_system_cancel">取消</string>
    <string name="activity_nick_title">修改昵称</string>
    <string name="activity_nick_name_hint">请输入昵称</string>
    <string name="activity_nick_success">修改成功</string>
    <string name="activity_paypwd_title">修改资金密码</string>
    <string name="activity_paypwd_title_set">设置资金密码</string>
    <string name="activity_paypwd_mobile_hint">请输入手机号</string>
    <string name="activity_paypwd_code_hint">请输入验证码</string>
    <string name="activity_paypwd_google_hint">请输入谷歌验证码</string>
    <string name="activity_paypwd_pwd_hint">请输入新的资金密码</string>
    <string name="activity_paypwd_pwd_format_hint">资金密码不能低于6位数</string>
    <string name="activity_paypwd_modify_sucess">修改成功</string>
    <string name="activity_paypwd_set_success">设置成功</string>
    <string name="activity_mobile_title">修改手机号</string>
    <string name="activity_mobile_mobile_hint">请输入账号</string>
    <string name="activity_mobile_code_hint">请输入验证码</string>
    <string name="activity_mobile_modify_success">手机号修改成功</string>
    <string name="activity_mobile_bind_modify_success">手机号绑定成功</string>
    <string name="activity_base_tip">提示</string>
    <string name="activity_base_confirm">确定</string>
    <string name="activity_base_cancel">取消</string>
    <string name="activity_authenticate_name">真实姓名</string>
    <string name="activity_authenticate_id">身份证号</string>
    <string name="activity_authenticate_id_hint">请输入身份证号</string>
    <string name="activity_nick_name">昵称</string>
    <string name="activity_find_mobile">账\u3000\u3000号</string>
    <string name="activity_find_code">验证码</string>
    <string name="activity_find_password">新密码</string>
    <string name="activity_find_repassword">确认密码</string>
    <string name="activity_find_google_paste">粘贴</string>
    <string name="activity_find_google">谷歌验证码</string>
    <string name="activity_find_send">获取验证码</string>
    <string name="activity_paypwd_pwd">资金密码</string>
    <string name="activity_mobile_mobile">新手机号</string>

    <string name="user_invite_share_title">分享到</string>
    <string name="user_invite_share_wx">微信</string>
    <string name="user_invite_share_pyq">朋友圈</string>

    <string name="smscode_send_success">验证码已经发送请注意查收</string>
    <string name="smscode_send_failure">验证码发送失败</string>
    <string name="storage_refused">已拒绝BCoin获取您的内存权限</string>
    <string name="web_create_pic_failure">生成图片失败</string>
    <string name="text_moblie">手机号</string>
    <string name="user_setting_bd_mail">绑定手机号</string>
</resources>
