<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_mobile"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_mobile_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F0F0F0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_code"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_code_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/selector_blue"
                    android:gravity="center"
                    android:text="@string/activity_find_send"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:id="@+id/line_google"
                android:visibility="gone"
                android:background="#F0F0F0"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/ll_google"
                android:visibility="gone"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_google"
                    android:textSize="15sp"
                    android:textColor="@color/fontColor_gray"
                    android:layout_width="107dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/edt_google"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:maxLength="6"
                    android:background="@null"
                    android:inputType="number"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:hint="@string/activity_find_google_hint"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_paste"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/selector_blue"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/activity_find_google_paste"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_password"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_password_format_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F0F0F0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_repassword"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_repassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_password_format_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_blue"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</layout>
