<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/splitLine_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="手机号"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_phone_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hint="请输入手机号码"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F0F0F0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="手机验证码"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_code_old"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="请输入验证码"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_send_old"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/text_moblie"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_phone_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_paypwd_mobile_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F0F0F0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/activity_find_code"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_code_new"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_code_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_send_new"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/selector_blue"
                    android:gravity="center"
                    android:text="@string/activity_find_send"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F0F0F0" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_blue"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</layout>